# telus-flaky-job-failures-prioritization

./: .gitignore  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  entrypoint.sh
example/: README.md
notebooks/data_labeling_process/: 02_failure_categories_labeling.ipynb
notebooks/results/: clusters.csv
src/: 01_preprocess_builds.ipynb  02_failure_categories_labeling.ipynb  03_label_prioritization.ipynb
src/analyzer/: analyze.py  utils.py
src/cli/: main.py
src/core/: config.py
src/flakeranker/: utils.py
src/flakeranker/analyzer/: analyze.py  utils.py
src/flakeranker/cli/: main.py
src/flakeranker/core/: config.py
src/flakeranker/labeler/: label.py
src/flakeranker/ranker/: rank.py
src/labeler/: patterns_refined.csv
src/labeling/: inference.py  patterns.csv  patterns_refined.csv
src/results/: categories.csv  clustering_model.pickle  clusters.csv  regex_inference_reports.txt  rfm_scores.csv  rfm_scores_correlation.txt  rfm_values.csv
src/scripts/: log.py  patterns.csv  utils.py  vizualization.py
src/utils/: utils.py  vizualization.py
study/: 01_preprocess_builds.ipynb  02_failure_categories_labeling.ipynb  03_labels_understanding.ipynb  04_categories_rfm_analysis.ipynb  04_labels_rfm_clustering.ipynb
study/data_labeling/: 01_preprocess_builds.ipynb
study/results/: clustering_model.pickle
study/rfm_analysis/: 03_categories_rfm_analysis.ipynb
study/rfm_analysis_rq1_rq2_rq3/: 04_complementary_rfm_analysis.ipynb
study/rfm_modeling_and_prioritization_rq4/: 04_categories_rfm_prioritization.ipynb
