[tool.poetry]
name = "telus-flaky-job-failures-prioritization"
version = "0.1.0"
description = "Understanding and Prioritizing Flaky Job Failure Categories"
authors = ["Henri Aïdasso <ahenrij@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
clean-text = {extras = ["gpl"], version = "^0.6.0"}
scikit-learn = "^1.5.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
kaleido = "0.2.1"
nbformat = "^5.10.4"
matplotlib = "^3.8.4"
plotly = "^5.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
